--- a/MNA_IAyAA_6.ipynb
+++ b/MNA_IAyAA_6.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "id": "exXsscs-Dh-2"
    },
@@ -65,7 +65,6 @@
     "\n",
     "import os\n",
     "import pandas as pd\n",
-    "from google.colab import drive\n",
     "\n",
     "# Considerar librería que añada archivos .asc o revisar si la pasndas tiene esa capacidad"
    ]
@@ -93,32 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "phQqNi8DJJlv",
-    "outputId": "e982a296-f482-4735-c4ef-1695a4ede4eb"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Primero montamos el drive para poder cargarel arhivo que tenemos guardado en el drive\n",
-    "drive.mount('/content/drive')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -131,10 +105,7 @@
     {
      "data": {
       "text/html": [
-       "\n",
-       "  <div id=\"df-360722df-a216-4431-a340-a25da1cf2662\">\n",
-       "    <div class=\"colab-df-container\">\n",
-       "      <div>\n",
+       "<div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
        "        vertical-align: middle;\n",
@@ -299,83 +270,7 @@
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 21 columns</p>\n",
-       "</div>\n",
-       "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-360722df-a216-4431-a340-a25da1cf2662')\"\n",
-       "              title=\"Convert this dataframe to an interactive table.\"\n",
-       "              style=\"display:none;\">\n",
-       "        \n",
-       "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-       "       width=\"24px\">\n",
-       "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-       "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-       "  </svg>\n",
-       "      </button>\n",
-       "      \n",
-       "  <style>\n",
-       "    .colab-df-container {\n",
-       "      display:flex;\n",
-       "      flex-wrap:wrap;\n",
-       "      gap: 12px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert {\n",
-       "      background-color: #E8F0FE;\n",
-       "      border: none;\n",
-       "      border-radius: 50%;\n",
-       "      cursor: pointer;\n",
-       "      display: none;\n",
-       "      fill: #1967D2;\n",
-       "      height: 32px;\n",
-       "      padding: 0 0 0 0;\n",
-       "      width: 32px;\n",
-       "    }\n",
-       "\n",
-       "    .colab-df-convert:hover {\n",
-       "      background-color: #E2EBFA;\n",
-       "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-       "      fill: #174EA6;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert {\n",
-       "      background-color: #3B4455;\n",
-       "      fill: #D2E3FC;\n",
-       "    }\n",
-       "\n",
-       "    [theme=dark] .colab-df-convert:hover {\n",
-       "      background-color: #434B5C;\n",
-       "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-       "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-       "      fill: #FFFFFF;\n",
-       "    }\n",
-       "  </style>\n",
-       "\n",
-       "      <script>\n",
-       "        const buttonEl =\n",
-       "          document.querySelector('#df-360722df-a216-4431-a340-a25da1cf2662 button.colab-df-convert');\n",
-       "        buttonEl.style.display =\n",
-       "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-       "\n",
-       "        async function convertToInteractive(key) {\n",
-       "          const element = document.querySelector('#df-360722df-a216-4431-a340-a25da1cf2662');\n",
-       "          const dataTable =\n",
-       "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-       "                                                     [key], {});\n",
-       "          if (!dataTable) return;\n",
-       "\n",
-       "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-       "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-       "            + ' to learn more about interactive tables.';\n",
-       "          element.innerHTML = '';\n",
-       "          dataTable['output_type'] = 'display_data';\n",
-       "          await google.colab.output.renderOutput(dataTable, element);\n",
-       "          const docLink = document.createElement('div');\n",
-       "          docLink.innerHTML = docLinkHtml;\n",
-       "          element.appendChild(docLink);\n",
-       "        }\n",
-       "      </script>\n",
-       "    </div>\n",
-       "  </div>\n",
-       "  "
+       "</div>"
       ],
       "text/plain": [
        "   laufkont  laufzeit  moral  verw  hoehe  sparkont  beszeit  rate  famges  \\\n",
@@ -402,7 +297,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +305,8 @@
    "source": [
     "#Ruta del archivo a descargarse\n",
     "#Usamos el mismo metodo read_csv, con el argumento s+, para identificar los espacios en vez de separacion por coma\n",
-    "df= pd.read_csv('/content/drive/MyDrive/Colab Notebooks/SouthGermanCredit.asc', sep='\\s+')\n",
+    "df= pd.read_csv('SouthGermanCredit.asc', sep='\\s+')\n",
+    "df.to_csv('SouthGermanCredit.asc')\n",
     "df.head()\n",
     "\n"
    ]
@@ -922,7 +818,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -937,6 +833,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4435b413409b7307cd356ee89e19765aec4b40a42c29a345f39f43dd56cea7e2"
+   }
   }
  },
  "nbformat": 4,
