UPDATED: change file name

--- a/Arboldedecision_Equipo51.ipynb
+++ b/Arboldedecision_Equipo51.ipynb
@@ -23,11 +23,11 @@
    "source": [
     "**Nombres y matrículas de los integrantes del equipo:**\n",
     "\n",
-    "*   \n",
-    "*   \n",
-    "*   \n",
-    "*   \n",
-    "*   \n"
+    "*   Carlos Enríquez Gorgonio A01793102\n",
+    "*   Fernando Ramírez Gómez A01298109\n",
+    "*   Francisco Javier Ramírez Arias A01316379\n",
+    "*   Jessica Lechuga Ramos A01793512\n",
+    "*   Moisés Rangel Silva A00143704\n"
    ]
   },
   {
