--- a/Arboldedecision_Equipo51.ipynb
+++ b/Arboldedecision_Equipo51.ipynb
@@ -235,6 +235,15 @@
         "from sklearn.impute import SimpleImputer\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
         "\n",
+        "# sea agregó el acceso a estas librerías\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier \n",
+        "\n",
+        "from sklearn.model_selection import train_test_split \n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
         "# Considerar librería que añada archivos .asc o revisar si la pasndas tiene esa capacidad"
       ]
     },
