Creado mediante Colaboratory

--- a/Arboldedecision_Equipo51.ipynb
+++ b/Arboldedecision_Equipo51.ipynb
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "exXsscs-Dh-2"
       },
@@ -258,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -556,7 +556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -904,7 +904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1208,7 +1208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1628,7 +1628,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "YXlcSWA-C4Dj"
       },
@@ -1658,7 +1658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1690,7 +1690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1720,7 +1720,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1747,7 +1747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1794,7 +1794,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1841,7 +1841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1901,7 +1901,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "VpMdz6c-2G1t"
       },
@@ -1926,7 +1926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1964,7 +1964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "BKI80-YdC4HN",
         "colab": {
@@ -2006,7 +2006,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2223,7 +2223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2271,7 +2271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "qs5ml2lX2G13"
       },
@@ -2283,7 +2283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "xDGwOncO2G14"
       },
@@ -2298,7 +2298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2753,7 +2753,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2790,7 +2790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3052,7 +3052,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "JALYJy5O2G2A"
       },
@@ -3105,7 +3105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "RBVSFwK4C6g9"
       },
@@ -3144,7 +3144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "7KXnlNzAC69Y"
       },
@@ -3163,7 +3163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "hshl_jSf2G2E"
       },
@@ -3182,7 +3182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "QnUpdTym2G2F"
       },
@@ -3201,7 +3201,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "QbnhQ-MS2G2G"
       },
@@ -3224,7 +3224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "lzjWyGl62G2G"
       },
@@ -3256,7 +3256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "FjO8cSpk2G2H"
       },
@@ -3268,7 +3268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3340,7 +3340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3403,7 +3403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "idgGE1UN2G2N"
       },
@@ -3423,7 +3423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3597,7 +3597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "jaDj3kawC9B6"
       },
@@ -3622,7 +3622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "4tQxQROVC9Us",
         "colab": {
@@ -3699,7 +3699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "EwQUNs0C2G2Y"
       },
@@ -3716,7 +3716,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3785,7 +3785,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "enOkl-rX2G2b"
       },
@@ -3811,7 +3811,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3857,7 +3857,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "qGGNGqPZ2G2c"
       },
@@ -3874,7 +3874,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3927,8 +3927,19 @@
         "en su búsqueda deben ser al menos los siguientes: ccp_alpha, criterion, max_depth, \n",
         "min_samples_split y class_weight. En este caso deberás usar la métrica (scoring) “recall”. \n",
         "Imprime la mejor combinación de parámetros obtenidos, así como el valor del mejor \n",
-        "desempeño (score) obtenido con la métrica “recall”. ¿Cuál es la utilidad de la métrica \n",
-        "“recall”? Incluye tus conclusiones.\n",
+        "desempeño (score) obtenido con la métrica “recall”. \n",
+        "\n",
+        "\n",
+        "¿Cuál es la utilidad de la métrica \n",
+        "“recall”? \n",
+        "\n",
+        "La utilidad de \"recall\" es para conocer la tasa de verdaderos positivos, es decir, el porcentaje de elementos de la clase real positiva que fueron pronosticados correctamente. Esto se calcula dividiendo los verdaderos positivos entre la suma de verdaderos postivos más falsos positivos. \n",
+        "\n",
+        "**Incluye tus conclusiones.**\n",
+        "\n",
+        "El \"recall\" es la capacidad de poder detectar la correcta asignación de créditos entre los créditos otorgados. \n",
+        "\n",
+        "En este caso se usó para la validación del modelo la métrica \"recall\", que nos da como resultado que el mejor valor de \"recall\" obtenido con la mejor combinación es 1.0. Y esta mejor combinación de valores encontrados de los hiperparámetros es {'ccp_alpha': 0.0, 'class_weight': {0: 1, 1: 1}, 'criterion': 'gini', 'max_depth': 1, 'min_samples_split': 2}\n",
         "\n",
         "NOTA: Toma en cuenta que el método de random forest pude tardar varios minutos en \n",
         "llevar a cabo."
@@ -3936,7 +3947,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "id": "cfFcnCVR2G2e"
       },
@@ -3962,7 +3973,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3988,7 +3999,7 @@
         "grid.fit(Xx, np.ravel(y_train))\n",
         "best_params_rf =  grid.best_params_\n",
         "\n",
-        "print('Mejor valor de exactitud obtenido con la mejor combinación:', grid.best_score_)\n",
+        "print('Mejor valor de \"recall\" obtenido con la mejor combinación:', grid.best_score_)\n",
         "print('Mejor combinación de valores encontrados de los hiperparámetros:', best_params_rf)\n",
         "print('Métrica utilizada:', grid.scoring)"
       ]
@@ -4002,14 +4013,13 @@
         "- f.  Con los mejores valores de los hiperparámetros encontrados con la métrica “recall” para \n",
         "el modelo de bosque aleatorio, obtener las curvas de validación (validation curve), \n",
         "incrementando la complejidad del modelo a través del hiperparámetro “max_depth” con \n",
-        "al menos 10 valores. Si lo crees adecuado, puedes hacer los ajustes que consideres \n",
-        "adecuados para mejorar el resultado y evitar el sobreentrenamiento o el \n",
+        "al menos 10 valores. Si lo crees adecuado, puedes hacer los ajustes que consideres para mejorar el resultado y evitar el sobreentrenamiento o el \n",
         "subentrenamiento."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "metadata": {
         "id": "jko9iTQq2G2h"
       },
@@ -4026,7 +4036,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4121,7 +4131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "x6uBleJUC_AU",
         "colab": {
@@ -4182,7 +4192,9 @@
         "id": "9_NaGQqL2G2l"
       },
       "source": [
-        "# Conclusiones -----"
+        "Conclusiones\n",
+        "En este ejercicios se obtuvo el modelo de regresión logística con los mejores parámetros usando la métrica f1-score, dando como resultado la métrica de desempeño del modelo final obtenido con el conjunto de prueba:\n",
+        "F1_Score: 0.776. Se mejoró el resultado, sin embargo su desempeño es bajo, pasando de un modelo subentrenado a uno mejor, pero no como el obtenido con otros modelos, a pesar de que se trataron los datos."
       ]
     },
     {
@@ -4198,7 +4210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "VDa_Iiiq2G2n"
       },
@@ -4220,7 +4232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "metadata": {
         "id": "n0P_AcyjC_Dh",
         "colab": {
@@ -4277,7 +4289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "Us1tHFGr2G2p"
       },
@@ -4299,7 +4311,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
