Creado mediante Colaboratory

--- a/Arboldedecision_Equipo51.ipynb
+++ b/Arboldedecision_Equipo51.ipynb
@@ -3939,7 +3939,9 @@
         "\n",
         "El \"recall\" es la capacidad de poder detectar la correcta asignación de créditos entre los créditos otorgados. \n",
         "\n",
-        "En este caso se usó para la validación del modelo la métrica \"recall\", que nos da como resultado que el mejor valor de \"recall\" obtenido con la mejor combinación es 1.0. Y esta mejor combinación de valores encontrados de los hiperparámetros es {'ccp_alpha': 0.0, 'class_weight': {0: 1, 1: 1}, 'criterion': 'gini', 'max_depth': 1, 'min_samples_split': 2}\n",
+        "En este caso se usó para la validación del modelo la métrica \"recall\", que nos da como resultado que el mejor valor obtenido y con la mejor combinación es 1.0, lo que significa que se pudieron asignar los créditos a todos los buenos clientes.\n",
+        "\n",
+        "Y esta mejor combinación de valores encontrados de los hiperparámetros es {'ccp_alpha': 0.0, 'class_weight': {0: 1, 1: 1}, 'criterion': 'gini', 'max_depth': 1, 'min_samples_split': 2}\n",
         "\n",
         "NOTA: Toma en cuenta que el método de random forest pude tardar varios minutos en \n",
         "llevar a cabo."
@@ -4188,14 +4190,17 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "9_NaGQqL2G2l"
-      },
       "source": [
-        "Conclusiones\n",
-        "En este ejercicios se obtuvo el modelo de regresión logística con los mejores parámetros usando la métrica f1-score, dando como resultado la métrica de desempeño del modelo final obtenido con el conjunto de prueba:\n",
-        "F1_Score: 0.776. Se mejoró el resultado, sin embargo su desempeño es bajo, pasando de un modelo subentrenado a uno mejor, pero no como el obtenido con otros modelos, a pesar de que se trataron los datos."
-      ]
+        "**Conclusiones**\n",
+        "\n",
+        "En este ejercicio se aplicó el modelo de regresión logística con los mejores parámetros usando la métrica f1-score, dando como resultado la métrica de desempeño del modelo final obtenido con el conjunto de prueba:\n",
+        "F1_Score: 0.776 (77.6 %). \n",
+        "\n",
+        "Se mejoró el resultado, sin embargo su desempeño sigue siendo bajo, aunque se pasó de un modelo subentrenado a uno mejor, pero no como el obtenido con otros modelos, a pesar de que se trataron los datos.\n"
+      ],
+      "metadata": {
+        "id": "2NTMxMsfYnnV"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4204,7 +4209,9 @@
       },
       "source": [
         "- b.  Obtener el  modelo de árbol de decisiones con los mejores parámetros que hayas \n",
-        "encontrado con la métrica “precision” utilizada. Imprimir el valor de dicha métrica e \n",
+        "encontrado con la métrica “precision” utilizada. Imprimir el valor de dicha métrica\n",
+        "\n",
+        "\n",
         "incluye tus conclusiones finales para este caso."
       ]
     },
@@ -4363,7 +4370,7 @@
         "Recall_Final = mi_recall(y_val, ypred_obt)\n",
         "\n",
         "print(\"Métricas de desempeño del modelo final obtenido con el conjunto de prueba:\")\n",
-        "print(\"F1_Score: %.3f\" % Recall_Final)"
+        "print(\"Recall: %.3f\" % Recall_Final)"
       ]
     },
     {
@@ -4372,7 +4379,11 @@
         "id": "Ey-Wpf_u2G2t"
       },
       "source": [
-        "# Concluciones Finales"
+        "**Conclusiones** \n",
+        "\n",
+        "En este caso se obtuvoi el modelo de bosque aleatorio con los mejores parámetros usando la métrica “recall”.\n",
+        "\n",
+        "Se obtuvo como métrica de desempeño del modelo final  con el conjunto de prueba un resultado de \"Recall\" iguala 1. Este modelo no produce"
       ]
     },
     {
