Creado mediante Colaboratory

--- a/Arboldedecision_Equipo51.ipynb
+++ b/Arboldedecision_Equipo51.ipynb
@@ -4325,7 +4325,9 @@
         "\n",
         "Para llegar a cada conslusión planteada en cada uno de los ejercicios, se requirieron etapas de preprocesamiento, tales como limpieza de datos, revisión de imputaciones necesarias, parametrización de datos categóricos, bninarkios y ordinales. Se comprobó ante que no hubise celdas de filas y columnas con falta de datos. No fue necesaria realizar ninguna imputación, porque se tuvo acceso a todo el dataset, lo cual no ocurre generalmente, no obstante, se tomaron medidas preventivas en los pipelines. Esta preparación colaboró al buen funcionamiento de cada modelo propuesto y analiado. \n",
         "\n",
-        "Posterior a esto, se realizaron las conversiones necesarias a los datos, para poder aplicar funciones como la regresión logistica. Despues de estas conversiones el enfoque fue en analizar los resultados de cada modelo, asi como las graficas de bigotes, para conocer el mejor comportamiento en el sistema."
+        "Posterior a esto, se realizaron las conversiones necesarias a los datos, para poder aplicar funciones como la regresión logistica. Despues de estas conversiones el enfoque fue en analizar los resultados de cada modelo, asi como las graficas de bigotes, para conocer el mejor comportamiento en el sistema.\n",
+        "\n",
+        "Los métodos para tratar los datos tienen un impacto al entrenar el modelo ya que ayudan a llegar fácilmente a un buen desempeño del mismo, si bien la regresión logística no da malos valores si le cuesta llegar a un buen valor con 1000 iteraciones, en cuanto a los árboles de decisiones como el bosque aleatorio eligen correctamente a los clientes que siempre serán buenos."
       ],
       "metadata": {
         "id": "MNFcCmttf1hp"
