Creado mediante Colaboratory

--- a/Arboldedecision_Equipo51.ipynb
+++ b/Arboldedecision_Equipo51.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/KarltonBotics/MNA-IA-Equipos51/blob/main/Arboldedecision_Equipo51.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "VFj0sSM06dYa"
       },
       "source": [
@@ -4442,22 +4452,25 @@
         "\n",
         "Posterior a esto, se realizaron las transformaciones necesarias a los datos, para poder aplicar funciones como la regresión logística. Dichas transformaciones permitieron un tratamiento más eficiente de la información, cabe señalar que la función OneHotEncoder, aumentó el tamaño de nuestro dataset, aumentando la cantidad de columnas, pero estabilizando el contenido de los datos categóricos, y lo mismo ocurrió con el MinMaxScaler.\n",
         "\n",
-        "Después de estas transformaciones, el enfoque fue en analizar los resultados de cada modelo (Regresión logística, Árbol de decisión y Bosque Aleatorio), y de la misma forma probando los resultados obtenidos dependiendo el tipo de métricas de exactitud aplicadas, las cuales son accuracy, precision, recall y f1-score, así como a través del análisis de las gráficas de caja, para conocer el mejor comportamiento en el sistema.\n",
+        "Después de estas transformaciones, el enfoque fue en analizar los resultados de cada modelo (Regresión Logística, Árbol de Decisión y Bosque Aleatorio), y de la misma forma probando los resultados obtenidos dependiendo el tipo de métricas de exactitud aplicadas, las cuales son accuracy, precision, recall y f1-score, así como a través del análisis de las gráficas de caja, para conocer el mejor comportamiento en el sistema.\n",
         "\n",
-        "Los métodos para tratar los datos tienen un impacto en el comportamiento del entrenamiento del modelo a que ayudan a llegar fácilmente a un buen desempeño del mismo, si bien la regresión logística no refleja valores malos, si le cuesta llegar a un buen valor con 1000 iteraciones.\n",
+        "Los métodos para tratar los datos tienen un impacto en el comportamiento del entrenamiento del modelo a que ayudan a llegar fácilmente a un buen desempeño del mismo, si bien la Regresión Logística no refleja valores malos, si le cuesta llegar a un buen valor con 1000 iteraciones.\n",
         "\n",
-        "Analizando el modelo de Randon Forest, se observó que es el modelo más eficiente, ya que su media y mediana, son cercanas, con una distribución casi normal, y con desviaciones estándar muy similares y sin efectos significativos en sus outliers.\n",
+        "Analizando el modelo de Bosque Aleatorio, se observó que es el modelo más eficiente, ya que su media y mediana, son cercanas, con una distribución casi normal, y con desviaciones estándar muy similares y sin efectos significativos en sus outliers.\n",
         "\n",
-        "También, se indica que durante las pruebas, se observó sobre entrenamiento cuando se aplicaron métricas como el recall y el f1, tanto para el Árbol de Decisión y el bosque Aleatorio que se entcontraron con sobre-entrenamiento, en cambio, con la Regresión Logística se observó sub-entrenamiento, antes de experimentar con los parámetros más exactos. \n",
+        "También, se indica que durante las pruebas, se observó sobre entrenamiento cuando se aplicaron métricas como el Recall y el f1, tanto para el Árbol de Decisión y el Bosque Aleatorio que se encontraron con sobre-entrenamiento, en cambio, con la Regresión Logística se observó sub-entrenamiento, antes de experimentar con los parámetros más exactos. \n",
         "\n",
-        "El mejor modelo observado fue el árbol de decisiones, que presentó 4 niveles, lo cual nos indica un comportamiento normal, es decir, no se sobre entrena generando demasiadas ramificaciones.\n",
+        "El mejor modelo observado fue el Árbol de Decisiones, que presentó 4 niveles, lo cual nos indica un comportamiento normal, es decir, no se sobre entrena generando demasiadas ramificaciones.\n",
         "\n",
         "La sensibilidad o recall, se conoce como tasa de verdaderos positivos, o true positive rate, es la proporción de casos positivos que fueron correctamente identificados por el algoritmo, y se calcula dividiendo el total de verdaderos positivos entre la suma de los verdaderos positivos más los falsos negativos.\n",
-        "En este caso el recall nos dio 1, lo que significa que el modelo podrá identificar correctamente la asignación de los créditos de las personas clasificadas como confiables\n",
+        "\n",
+        "En este caso el Recall nos dió 1, lo que significa que el modelo podrá identificar correctamente la asignación de los créditos de las personas clasificadas como confiables.\n",
         "\n",
         "En cuanto a los árboles de decisiones, como el bosque aleatorio, eligen correctamente a los clientes que siempre serán buenos.\n",
         "\n",
-        "Finalmente, el aprendizaje del ejercicio fue saber que los árboles de decisiones nos permiten considerar a detalle y de forma separada a través de subconjuntos, los modelos y sus características. Para este ejercicio se comprueba que el Random Forest, fue el modelo que presentó mejores resultados, ya que se basa en el trabajo colaborativo combinando varios modelos de forma conjunta en lugar de buscar solo un algoritmo con parámetros particulares."
+        "Finalmente, el aprendizaje del ejercicio fue saber que los Árboles de Decisiones nos permiten considerar a detalle y de forma separada a través de subconjuntos, los modelos y sus características. \n",
+        "\n",
+        "Para este ejercicio se comprueba que el Bosque Aleatorio, fue el modelo que presentó mejores resultados, ya que se basa en el trabajo colaborativo combinando varios modelos de forma conjunta en lugar de buscar solo un algoritmo con parámetros particulares."
       ]
     },
     {
@@ -4473,7 +4486,8 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.10.7 64-bit",
