Creado mediante Colaboratory

--- a/Arboldedecision_Equipo51.ipynb
+++ b/Arboldedecision_Equipo51.ipynb
@@ -4464,13 +4464,7 @@
         "\n",
         "La sensibilidad o recall, se conoce como tasa de verdaderos positivos, o true positive rate, es la proporción de casos positivos que fueron correctamente identificados por el algoritmo, y se calcula dividiendo el total de verdaderos positivos entre la suma de los verdaderos positivos más los falsos negativos.\n",
         "\n",
-        "En este caso el Recall nos dió 1, lo que significa que el modelo podrá identificar correctamente la asignación de los créditos de las personas clasificadas como confiables.\n",
-        "\n",
-        "En cuanto a los árboles de decisiones, como el bosque aleatorio, eligen correctamente a los clientes que siempre serán buenos.\n",
-        "\n",
-        "Finalmente, el aprendizaje del ejercicio fue saber que los Árboles de Decisiones nos permiten considerar a detalle y de forma separada a través de subconjuntos, los modelos y sus características. \n",
-        "\n",
-        "Para este ejercicio se comprueba que el Bosque Aleatorio, fue el modelo que presentó mejores resultados, ya que se basa en el trabajo colaborativo combinando varios modelos de forma conjunta en lugar de buscar solo un algoritmo con parámetros particulares."
+        "En este caso el Recall dió como resultado 1, lo que significa que el modelo podrá identificar correctamente la asignación de los créditos de las personas clasificadas como confiables, que son los verdaderos positivos; sin embargo con esta métrica no se pude obervar el comportamiento de los casos que son verdaderos negativos o falsos positivos, es decir no hay certeza de que clasifique bien a los clientes que no son confiables.\n"
       ]
     },
     {
