--- a/MNA_IAyAA_semana_7_Actividad.ipynb
+++ b/MNA_IAyAA_semana_7_Actividad.ipynb
@@ -32,6 +32,21 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Esta Tarea se deberá resolver en equipos, de acuerdo a como fueron integrados al inicio del curso. \n",
+        "\n",
+        "El artículo del 2016 de Moro, Rita & Vala relacionado al presente problema lo encuentras aquí: https://www.semanticscholar.org/paper/Predicting-social-media-performance-metrics-and-of-Moro-\n",
+        "Rita/dec55692590820754b53c916e29bb2b42c0e5104  \n",
+        " \n",
+        "Y el conjunto de datos utilizado es el de la siguiente liga de la UCI: https://archive.ics.uci.edu/ml/datasets/Facebook+metrics \n",
+        "\n",
+        "\n",
+        "El archivo se llama dataset_Facebook.csv y contiene 500 registros y 19 columnas.  El objetivo es determinar el impacto generado por un anuncio de una marca de cosméticos en  Facebook, en el cual se intentaron varias variantes en la manera de mostrar el anuncio. Siguiendo el  artículo, deberás considerar como predictores o variables de entrada aquellas que se indican en la Tabla 3. Por otro lado, en la Tabla 2, los autores consideran varios casos para la variable de salida, intentando  determinar cuál puede ser el mejor caso para medir el éxito de la campaña. Para este ejercicio deberás  considerar únicamente los siguientes tres casos como variable de salida: “Lifetime post consumers”,  “Lifetime People who have liked a Page and engaged with a post” y “Likes”."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "FrJ2ahMODVj1"
       },
