--- a/MNA_IAyAA_semana_7_Actividad.ipynb
+++ b/MNA_IAyAA_semana_7_Actividad.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/KarltonBotics/MNA-IA-Equipos51/blob/main/MNA_IAyAA_semana_7_Actividad.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "exXsscs-Dh-2"
       },
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -431,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -655,7 +655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -719,7 +719,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -773,7 +773,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "YXlcSWA-C4Dj"
       },
@@ -791,7 +791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "BKI80-YdC4HN"
       },
@@ -807,7 +807,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "xgz8Keyplr-S"
       },
@@ -842,7 +842,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "Eg0YGHURUO0q"
       },
@@ -867,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -895,7 +895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -923,8 +923,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "PZa0eb8cN-1b",
+        "outputId": "0a3fed78-5e6a-41ae-d353-4100f257795a"
+      },
       "outputs": [
         {
           "data": {
@@ -1018,14 +1021,16 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "bE1RWOkEN-1c"
+      },
       "source": [
         "Podemos ver que los datos toman una distribución normal al aplicar el Inverso multiplicativo."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "JicZq8E4V02J"
       },
@@ -1043,7 +1048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1069,7 +1074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1096,8 +1101,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "QumhpSOeN-1g",
+        "outputId": "ed4bf023-8836-4027-fbfb-772a8ec4ebe5"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -1123,7 +1131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1148,7 +1156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1182,7 +1190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1216,8 +1224,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "-0KGxrcON-1p",
+        "outputId": "9edfd000-9ca9-4250-f3f3-b50a334da01a"
+      },
       "outputs": [
         {
           "data": {
@@ -1238,8 +1249,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "m17wFuqAN-1q",
+        "outputId": "02ab527b-6beb-4196-ab51-87119e5f1879"
+      },
       "outputs": [
         {
           "data": {
@@ -1260,7 +1274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1298,8 +1312,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "IrwOO7GsN-1r"
+      },
       "outputs": [],
       "source": [
         "# Función que transforma los datos a una distribución mas normal\n",
@@ -1311,7 +1327,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": null,
       "metadata": {
         "id": "RBVSFwK4C6g9"
       },
@@ -1323,8 +1339,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "P-jyzkNJN-1t"
+      },
       "outputs": [],
       "source": [
         "# Transformación y normalización de los datos númericos\n",
@@ -1335,8 +1353,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "ec-gQQ8yN-1u"
+      },
       "outputs": [],
       "source": [
         "# Transformación y normalización de los datos ordinales\n",
@@ -1347,7 +1367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "metadata": {
         "id": "7KXnlNzAC69Y"
       },
@@ -1382,8 +1402,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "QRTR49fSN-1x",
+        "outputId": "ab9163d6-e97c-4b9e-c889-dd62dbaae8d0"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -1410,8 +1433,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "7HkQ5Oq7N-1y"
+      },
       "outputs": [],
       "source": [
         "# Entrenamiento del modelo regresor ficticio\n",
@@ -1425,9 +1450,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "metadata": {
-        "id": "4tQxQROVC9Us"
+        "id": "4tQxQROVC9Us",
+        "outputId": "c93bc49a-02c1-4b8e-8d7d-2ddaaf421753"
       },
       "outputs": [
         {
@@ -1446,8 +1472,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "XOhZvjoNN-1z",
+        "outputId": "a1041bc6-6334-4c7c-b2ce-cc7a162c5d51"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -1465,8 +1494,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "f3mjwzxCN-1z",
+        "outputId": "d0a86810-f0f9-40a7-f12f-d12bd7beb2cb"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -1484,8 +1516,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "_fHbItW-N-11",
+        "outputId": "fa822762-8677-4156-86f5-deea9fc9e1cb"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -1503,8 +1538,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "QtaelY0KN-12",
+        "outputId": "ce7d8e17-2469-4c42-ba1d-54590e1371eb"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -1522,8 +1560,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "jtXY8UX6N-16",
+        "outputId": "92dd1781-f849-427d-d977-a9fc309b2532"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -1559,7 +1600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": null,
       "metadata": {
         "id": "x6uBleJUC_AU"
       },
@@ -1587,9 +1628,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": null,
       "metadata": {
-        "id": "n0P_AcyjC_Dh"
+        "id": "n0P_AcyjC_Dh",
+        "outputId": "01f10726-ea1c-48db-8697-85d26404ed06"
       },
       "outputs": [
         {
@@ -1657,7 +1699,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Ofeob4X6N-19"
+      },
       "source": [
         "### Conclusiones\n",
         "\n",
@@ -1684,9 +1728,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": null,
       "metadata": {
-        "id": "ewvwUcJX78y1"
+        "id": "ewvwUcJX78y1",
+        "outputId": "69da1513-8b0d-40c1-c03a-a358ddddcc4b"
       },
       "outputs": [
         {
@@ -1713,7 +1758,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "yhwZYYz0N-1-"
+      },
       "source": [
         "### Conclusiones\n",
         "-------------------------------"
@@ -1739,7 +1786,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "id": "EBKcp0278IQV"
       },
@@ -1807,7 +1854,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "2NR62WetN-2F"
+      },
       "outputs": [],
       "source": [
         "#Configuración del modelo con la mejor combinación obtenida\n",
@@ -1821,7 +1870,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "id": "X6HJP9hb8LCp"
       },
@@ -1871,7 +1920,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "oNtRA2zON-2G"
+      },
       "source": [
         "### Conclusiones\n",
         "-----"
@@ -1898,7 +1949,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "XslgbrDWN-2J"
+      },
       "outputs": [],
       "source": [
         "#Configuración de diferentes valores para los hiperparámetros del modelo.\n",
@@ -1925,7 +1978,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "OXLn2obtN-2K"
+      },
       "outputs": [],
       "source": [
         "#Búsqueda del mejor resultado obtenido de la combinación de diferentes hiperparámetros\n",
@@ -1942,7 +1997,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "PHohqM3HN-2K"
+      },
       "outputs": [],
       "source": [
         "#Configuración del modelo con la mejor combinación obtenida Random Forest\n",
@@ -1955,7 +2012,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "_l-_yPIcN-2K"
+      },
       "outputs": [],
       "source": [
         "# Parametros del Modelo\n",
@@ -1983,7 +2042,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "N82rv-WZN-2L"
+      },
       "outputs": [],
       "source": [
         "importance = permutation_importance(best_modelo_rf, X_test, y_test, n_repeats=10)\n",
@@ -2000,7 +2061,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "sIQpinnzN-2M"
+      },
       "source": [
         "### Análisis de importancia de  factores"
       ]
@@ -2026,7 +2089,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "Pp4ldafVN-2N"
+      },
       "outputs": [],
       "source": [
         "#Configuración de diferentes valores para los hiperparámetros del modelo.\n",
@@ -2049,7 +2114,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "meh_XsWXN-2O"
+      },
       "outputs": [],
       "source": [
         "#Búsqueda del mejor resultado obtenido de la combinación de diferentes hiperparámetros\n",
@@ -2066,7 +2133,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "hCgAloXRN-2O"
+      },
       "outputs": [],
       "source": [
         "#Configuración del modelo con la mejor combinación obtenida\n",
@@ -2081,7 +2150,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "JjTH1to6N-2P"
+      },
       "outputs": [],
       "source": [
         "# Parametros del Modelo\n",
@@ -2108,7 +2179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "id": "-YiSnt9t8RfN"
       },
@@ -2128,7 +2199,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "wNGviuqKN-2Q"
+      },
       "source": [
         "### Análisis de importancia de  factores"
       ]
@@ -2153,7 +2226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "id": "gwpz77W38Uq0"
       },
@@ -2175,8 +2248,8 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.10.7 64-bit",
